multimedia_en_html.html

--- a/reto_multimedia/multimedia_en_html.html
+++ b/reto_multimedia/multimedia_en_html.html
@@ -12,13 +12,13 @@
 
     <h2>Audio</h2>
     <audio controls loop>
-        <source src="./material/audio.mp3" type="audio/mpeg">
+        <source src="/reto_multimedia/material/audio.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
     <h2>Video</h2>
     <video controls loop width="400">
-        <source src="./material/video.mp4" type="video/mp4">
+        <source src="/reto_multimedia/material/video.mp4" type="video/mp4">
         Your browser does not support the video element.
     </video>
 
