--- a/reto_multimedia/multimedia_en_html.html
+++ b/reto_multimedia/multimedia_en_html.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Multimedia en HTML</title>
-    <link rel="icon" href="./material/multimedia_1.png">
+    <link rel="icon" href="reto_multimedia/material/multimedia_1.png">
 </head>
 
 <body>
